infra/k8s/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  labels:
    name: pgadmin
spec:
  ingressClassName: nginx
  rules:
  - host: pgadmin.localdev.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pgadmin
            port: 
              number: 80
